[project]
name = "programacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "fastapi>=0.115.12",
    "memvid>=0.1.3",
    "pypdf>=5.6.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
